[gd_scene load_steps=2 format=3 uid="uid://cardscene123"]

[ext_resource type="Script" path="res://scripts/ui/card.gd" id="1_card"]

[node name="Card" type="Control"]
custom_minimum_size = Vector2(120, 180)
layout_mode = 3
anchors_preset = 0
offset_right = 120.0
offset_bottom = 180.0
script = ExtResource("1_card")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0.3, 0.4, 1)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="Inner" type="ColorRect" parent="Border"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.25, 0.25, 0.35, 1)

[node name="TypeIndicator" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 8.0
grow_horizontal = 2
color = Color(0.3, 0.5, 0.7, 1)

[node name="CostLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 30.0
offset_bottom = 35.0
theme_override_colors/font_color = Color(0.3, 0.7, 1, 1)
theme_override_font_sizes/font_size = 18
text = "1"
horizontal_alignment = 1

[node name="NameLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 12.0
offset_bottom = 35.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 12
text = "Card Name"
horizontal_alignment = 1

[node name="ArtArea" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 40.0
offset_right = -10.0
offset_bottom = 100.0
grow_horizontal = 2
mouse_filter = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="DescriptionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 8.0
offset_top = 105.0
offset_right = -8.0
offset_bottom = 155.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 10
text = "Card description goes here."
horizontal_alignment = 1
autowrap_mode = 2

[node name="StatsLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -25.0
offset_right = 30.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "1 / 4"
horizontal_alignment = 1
